samples/_failures_safe/1761158685_996371_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43a8c0f2.c: In function ‘main’:
./samples/SAFE/__tmp_43a8c0f2.c:177: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_43a8c0f2.c:176:9: error: expected declaration or statement at end of input
  176 |         if
      |         ^~
./samples/SAFE/__tmp_43a8c0f2.c:176:9: error: expected declaration or statement at end of input
